# prosody-server-rs

./: Cargo.toml  bench.sh  fullbench.sh  manybench.sh  multibench.sh  test.lua  testecho.lua  testecho_tls.lua  testlisten.lua  testserver.lua
docs/: api-reversed.md
net/: server.lua  server_rust.lua
src/: backend.rs  cert.rs  config.rs  conn.rs  conversion.rs  core.rs  fd.rs  ioutil.rs  lib.rs  mainloop.rs  server.rs  signal.rs  timer.rs  tls.rs  verify.rs
src/stream/: connect.rs  handle.rs  lua.rs  mod.rs  msg.rs  state.rs  worker.rs
