[package]
name = "prosody-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rserver"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "^0.6", features = ["async", "lua52", "vendored", "module"] }
tokio = { version = "^1.9", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "signal"] }
lazy_static = { version ="^1.4" }
# we need the dangerous stuff because XMPP has its own ways to verify a connection, so we mustn't rely on PKI verification alone.
rustls = { version = "^0.19", features = ["dangerous_configuration"] }
tokio-rustls = { version = "^0.22" }
rustls-pemfile = { version = "^0.2" }
log = { version = "^0.4" }
pin-project-lite = { version = "^0.2" }
bytes = { version = "^1" }
nix = { version = "^0.22" }
# bounded by rustls
webpki = { version = "^0.21.0" }
socket2 = { version = "^0.4" }
