[package]
name = "prosody-server"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rserver"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "^0.8", features = ["async", "vendored", "module"] }
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "signal"] }
lazy_static = { version ="^1" }
tokio-rustls = { version = "^0.23", features = ["dangerous_configuration"] }
rustls-pemfile = { version = "^0.2" }
pin-project-lite = { version = "^0.2" }
bytes = { version = "^1" }
nix = { version = "^0.22" }
socket2 = { version = "^0.4", features = ["all"] }
x509-parser = { version = "^0.11" }
idna = { version = "^0.2" }
# via tokio
futures-util = { version = "*" }

[features]
prosody-log = []
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
default = ["prosody-log", "lua52"]

[profile.release]
debug = true

[dev-dependencies]
tokio = { version = "^1.9", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "signal", "test-util"] }
